Fix to gradle_plugin shield.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -105,7 +105,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
     <tr>
         <th>Example</th>
         <td>
-            <a href="http://repo-redirect.herokuapp.com/homepage/maven_central?group=com.github.nwillc&package=almost-functional">http://repo-redirect.herokuapp.com/homepage/maven_central?group=com.github.nwillc&package=almost-functional</a>
+            <a href="./homepage/maven_central?group=com.github.nwillc&package=almost-functional">./homepage/maven_central?group=com.github.nwillc&package=almost-functional</a>
         </td>
     </tr>
     <tr>
@@ -153,7 +153,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
     <tr>
         <th>Example</th>
         <td>
-            <a href="http://repo-redirect.herokuapp.com/shield/maven_central?group=com.github.nwillc&package=almost-functional">http://repo-redirect.herokuapp.com/shield/maven_central?group=com.github.nwillc&package=almost-functional</a>
+            <a href="./shield/maven_central?group=com.github.nwillc&package=almost-functional">./shield/maven_central?group=com.github.nwillc&package=almost-functional</a>
         </td>
     </tr>
     <tr>
