Doc and script cleanups

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -26,11 +26,11 @@
 </head>
 <body>
 <h1>Shields</h1>
-This simple RESTful service to provide redirects for repository specific shields/badges and homepages.
+This simple RESTful service provides redirects for repository specific shields/badges and homepages.
 
 Currently supported repositories are:
 <ul>
-    <li>codecov</li>
+    <li>Codecov</li>
     <li>Github</li>
     <li>Gradle Plugins</li>
     <li>JCenter</li>
@@ -41,8 +41,7 @@ For any of these you can request a <code>shield</code>, which redirects to <a hr
 the repos own shield url, or a <code>homepage</code> which will redirect to the specified homepage at the repository.
 <p>
     For more info:<br>
-    <a href="./homepage/github?package=shields&path=nwillc"><img
-            src="./shield/github"></a>
+    <a href="./homepage/github?package=shields&path=nwillc"><img src="./shield/github"></a>
     <br/>
 
 <H2>API Documentation</H2>
