--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>
 <h1>Shields</h1>
-This simple RESTful service provides redirects for repository specific shields/badges and homepages.
+This simple RESTful service provides redirects for site specific shields/badges and homepages.
 
-Currently supported repositories are:
+Currently supported sites are:
 <ul>
     <li>Codecov</li>
     <li>Github</li>
@@ -39,7 +39,7 @@ Currently supported repositories are:
 </ul>
 
 For any of these you can request a <code>shield</code>, which redirects to <a href="http://shields.io">shields.io</a> or
-the repos own shield url, or a <code>homepage</code> which will redirect to the specified homepage at the repository.
+the repos own shield url, or a <code>homepage</code> which will redirect to the specified homepage at the site.
 <p>
     For more info:<br>
     <a href="./homepage/github?package=shields&path=nwillc"><img src="./shield/github"></a>
