--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -35,6 +35,7 @@ Currently supported sites are:
     <li>Gradle Plugins</li>
     <li>JCenter</li>
     <li>Maven Central</li>
+    <li>tl;drLegal</li>
     <li>Travis-CI</li>
 </ul>
 
@@ -52,7 +53,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
     </tr>
     <tr>
         <th>URL</th>
-        <td>/homepage/[codecov|github|gradle_plugin|jcenter|maven_central|travis-ci]</td>
+        <td>/homepage/[codecov|github|gradle_plugin|jcenter|maven_central|tldrlegal|travis-ci]</td>
     </tr>
     <tr>
         <th>Method</th>
@@ -75,7 +76,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
                 <tr>
                     <th align="right">package</th>
                     <td>The package name.</td>
-                    <td>codecov, github, gradle_plugin, jcenter, maven_central, travis-ci</td>
+                    <td>codecov, github, gradle_plugin, jcenter, maven_central, tldrlegal, travis-ci</td>
                 </tr>
                 <tr>
                     <th align="right">path</th>
@@ -100,7 +101,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
     </tr>
     <tr>
         <th>URL</th>
-        <td>/shield/[codecov|github|gradle_plugin|jcenter|maven_central|travis-ci]</td>
+        <td>/shield/[codecov|github|gradle_plugin|jcenter|maven_central|tldrlegal|travis-ci]</td>
     </tr>
     <tr>
         <th>Method</th>
@@ -123,7 +124,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
                 <tr>
                     <th align="right">package</th>
                     <td>The package name.</td>
-                    <td>codecov, jcenter, maven_central, travis-ci</td>
+                    <td>codecov, jcenter, maven_central, tldrlegal, travis-ci</td>
                 </tr>
                 <tr>
                     <th align="right">path</th>
