--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -94,7 +94,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
     </tr>
     <tr>
         <th>Success
-        <td>Redirects to the homepage on the repository site for the package specified.</td>
+        <td>Redirects to the homepage on the site for the package specified.</td>
     </tr>
     <tr>
         <th class="blue" colspan="2">Shield</th>
@@ -142,7 +142,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
     </tr>
     <tr>
         <th>Success</th>
-        <td>Redirects to a shield indicating the repository type, and the latest version if it can be determined.</td>
+        <td>Redirects to a shield indicating the site, and the latest version if it can be determined.</td>
     </tr>
 </table>
 </body>
