--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -154,7 +154,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
                 <tr>
                     <th align="right">group</th>
                     <td>The group name.</td>
-                    <td>jcenter, maven_central</td>
+                    <td>maven_central</td>
                 </tr>
                 <tr>
                     <th align="right">package</th>
@@ -164,7 +164,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
                 <tr>
                     <th align="right">path</th>
                     <td>The path to the repo, minus package name.</td>
-                    <td>codecov, travis-ci</td>
+                    <td>codecov, jcenter, travis-ci</td>
                 </tr>
             </table>
         </td>
