--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -106,7 +106,7 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
                 <tr>
                     <th align="right">group</th>
                     <td>The group name.</td>
-                    <td>gradle_plugin, jcenter, maven_central</td>
+                    <td>gradle_plugin, maven_central</td>
                 </tr>
                 <tr>
                     <th align="right">package</th>
