--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -180,5 +180,6 @@ the repos own shield url, or a <code>homepage</code> which will redirect to the 
         <td>Redirects to a shield indicating the site, and the latest version if it can be determined.</td>
     </tr>
 </table>
+<a href="./properties" >Build Properties</a>
 </body>
 </html>
